--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4",
+    "vue": "^3.2.13",
+    "vue-splash": "^1.2.1",
+    "vuetify": "^3.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
